tests/baselines/reference/S7.8.5_A1.5_T1.errors.txt
S7.8.5_A1.5_T1.ts(22,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
S7.8.5_A1.5_T1.ts(22,2): error TS1161: Unterminated regular expression literal.
S7.8.5_A1.5_T1.ts(23,2): error TS1109: Expression expected.


==== S7.8.5_A1.5_T1.ts (3 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionBackslashSequence
    info: |
      RegularExpressionBackslashSequence ::
      \ RegularExpressionNonTerminator
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
    description: >
      A RegularExpressionBackslashSequence may not contain a <LF>
    
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /\
    ~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
     
!!! error TS1161: Unterminated regular expression literal.
    /
     
!!! error TS1109: Expression expected.
    